# Assignment-2

./: Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/lib/: data_loader.py  evaluator.py  model.py  trainer.py
app/model/: CNN.pth
