[project]
name = "assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.4",
    "pydantic>=2.12.3",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "uvicorn>=0.38.0",
]
